Add Arabic Lang To Admin Page's

--- a/src/Project/Else/Components/locales/ar/transition.json
+++ b/src/Project/Else/Components/locales/ar/transition.json
@@ -1,8 +1,8 @@
 {
   "---------- Heading -----------": "---------- Heading -----------",
 
-  "ZEUS Admin": "لوحة تحكم زيوس",
-  "ZEUS Restaurant": "مطعم زيوس",
+  "ZEUS Admin": "لوحة تحكم الزيوس",
+  "ZEUS Restaurant": "مطعم الزيوس",
 
   "---------- Footer -----------": "---------- Footer -----------",
 
@@ -168,5 +168,185 @@
   "Your Name": "اسمك الكريم",
   "Save": "حفظ التغييرات",
   "Discard": "تجاهل",
-  "Confirm": "تأكيد"
+  "Confirm": "تأكيد",
+
+  "---------- Admin Home  -----------": "----------   Admin Home   -----------",
+
+  "Zeus Restaurant | Admin": "مطعم زيوس | الإدارة العليا",
+  "Executive Dashboard": "لوحة التحكم التنفيذية",
+  "Visionary Analytics": "التحليلات الاستشرافية",
+  "desc 11": "راقب نبض إمبراطورية الطهي الخاصة بك عبر رؤى فورية وتحليلات دقيقة صُممت خصيصاً للإدارة النخبوية.",
+  "User's Reports": "تقارير المستخدمين",
+  "Total Revenue": "إجمالي الإيرادات",
+  "New Customers": "العملاء الجدد",
+  "Total Customers": "قاعدة العملاء",
+  "Low Stock": "مخزون منخفض",
+  "vs last month": "مقارنة بالشهر الماضي",
+  "User Ecosystem Evolution": "تطور النظام البيئي للمستخدمين",
+  "Revenue Distribution": "توزيع العوائد",
+  "Elite Culinary Performance": "أداء النخبة في الطهي",
+  "New Branch: Dubai Mall": "فرع جديد: دبي مول",
+  "desc 12": "توسعة علامة زيوس التجارية لتصل إلى قلب دبي بحلول الربع الثالث من 2026.",
+  "Master Chef Recruitment": "استقطاب كبار الطهاة",
+  "desc 13": "توظيف طاهٍ حائز على 3 نجوم ميشلان لقسم المأكولات الإيطالية.",
+  "AI Ordering System": "نظام الطلب بالذكاء الاصطناعي",
+  "desc 14": "تفعيل تقنية التعرف الصوتي الذكي لطلبات الطاولات.",
+  "Future Vision": "الرؤية المستقبلية",
+  "desc 15": "الفصل القادم من إرث زيوس العريق في عالم الطهي.",
+
+  "---------- Admin Manage User  -----------": "----------  Admin Manage User -----------",
+
+  "Search by": "البحث بواسطة",
+  "name": "الاسم",
+  "Zeus | Admin => Manage User's": "زيوس | الإدارة => إدارة المستخدمين",
+  "Staff & Community": "الطاقم والمجتمع",
+  "Management": "الإدارة",
+  "Portal": "بوابة التحكم",
+  "desc 16": "إشراف شامل على فريق الطهي وأعضاء المجتمع. تتبع الأنشط، الأدوار، والحالات بشكل فوري.",
+  "Add New Chef": "إضافة شيف جديد",
+  "Total Users": "إجمالي المستخدمين",
+  "Active Now": "نشط الآن",
+  "Restricted": "مقيد",
+  "Clear": "تفريغ",
+  "User Growth Analysis": "تحليل نمو المستخدمين",
+  "Real-time verification metrics": "مقاييس التحقق الفورية",
+  "Total Community": "إجمالي المجتمع",
+  "Verified Accounts": "الحسابات الموثقة",
+  "Security Center": "مركز الأمان",
+  "Account restriction history": "سجل تقييد الحسابات",
+  "Timeline:": "الجدول الزمني:",
+  "Managers": "المدراء",
+  "Master Chefs": "كبار الطهاة",
+  "Community": "المجتمع",
+  "Monthly Salary : ": "الراتب الشهري: ",
+  "Master Chef": "ماستر شيف",
+  "System Administrator": "مدير النظام",
+  "Experience : ": "الخبرة: ",
+  "Blocked User": "مستخدم محظور",
+  "Verified Member": "عضو موثق",
+  "Community Member": "عضو المجتمع",
+  "Not Set": "لم يحدد بعد",
+  "Member": "عضو",
+  "BANNED": "محظور",
+  "Contact": "التواصل",
+  "Unknown": "غير معروف",
+  "Resident": "مقيم",
+  "DISABLED": "معطل",
+  "User Unverified Successfully!": "تم إلغاء توثيق المستخدم بنجاح",
+  "User Verified Successfully!": "تم توثيق المستخدم بنجاح",
+  "User Unblocked Successfully!": "تم رفع الحظر بنجاح",
+  "User Blocked Successfully!": "تم حظر المستخدم بنجاح",
+  "Full Admin Privileges": "صلاحيات إدارية كاملة",
+  "Unverify User": "إلغاء التوثيق",
+  "Verify User": "توثيق الحساب",
+  "Unblock User": "رفع الحظر",
+  "Block User": "حظر المستخدم",
+  "Update Salary $": "تحديث الراتب $",
+  "Fire Chef 👨‍🍳": "إنهاء خدمات الشيف 👨‍🍳",
+  "View Profile": "عرض الملف الشخصي",
+  "Chef Salary Updated Successfully": "تم تحديث راتب الشيف بنجاح",
+  "Update Salary": "تعديل المستحقات",
+  "desc 17": "تعديل التعويض الشهري لهذا الشيف. ستنعكس التغييرات في كشوف المرتبات.",
+  "Monthly Salary": "الراتب الشهري",
+  "Chef Fired Done": "تم إنهاء الخدمات بنجاح",
+  "Relieve Chef?": "إعفاء الشيف من مهامه؟",
+  "Are you sure you want to remove": "هل أنت متأكد من استبعاد",
+  "Confirm Termination": "تأكيد الإنهاء",
+  "Keep Staff Member": "الإبقاء على الموظف",
+  "Admin Authorization Required": "يتطلب تفويضاً إدارياً",
+  "Name Required": "الاسم مطلوب",
+  "Role Required": "الدور الوظيفي مطلوب",
+  "Salary Must Be More Than 0": "يجب أن يكون الراتب أكبر من 0",
+  "Please Select The City": "يرجى اختيار المدينة",
+  "Email Required": "البريد الإلكتروني مطلوب",
+  "Please Write A Correct Email": "يرجى إدخال بريد إلكتروني صحيح",
+  "Please Upload Chef Photo": "يرجى إرفاق صورة الشيف",
+  "Chef Added Successfully!": "تم إضافة الشيف بنجاح!",
+  "Name": "الاسم",
+  "Role": "الدور",
+  "Salary": "الراتب",
+  "Choose The City": "اختر المدينة",
+  "Recipes Created": "روائع مبتكرة",
+  "Certified Sous Chef": "شيف مساعد معتمد",
+  "Worked at Hilton (5 yrs)": "خبير سابق لدى هيلتون (5 سنوات)",
+  "Expert in Italian Cuisine": "خبير متخصص في فنون المطبخ الإيطالي",
+  "Access Level: Full": "مستوى النفاذ: صلاحيات كاملة",
+  "Last Audit: 2 days ago": "آخر مراجعة إدارية: منذ يومين",
+  "Manager since 2021": "بقيادة إدارية منذ 2021",
+  "Total Orders": "إجمالي الطلبات المستلمة",
+  "Trust Level: Identity Verified": "مستوى الثقة: الهوية موثقة",
+  "Trust Level: Pending": "مستوى الثقة: قيد التحقق",
+  "Top 5% of Customers": "من نخبة العملاء (أفضل 5%)",
+  "Member since 2024": "فرد من العائلة منذ 2024",
+  "Fire Chef": "إنهاء التعاقد",
+  "Manager Income Evolution": "مؤشر نمو العوائد الإدارية",
+  "Financial records are still being processed.": "جاري معالجة السجلات المالية حالياً.",
+  "desc 18": "ستظهر بيانات الدخل فور اكتمال الدورة المالية القادمة.",
+  "Chef Rating Performance": "مؤشر أداء وتقييم الشيف",
+  "Fresh Talent - No Reviews Yet.": "موهبة واعدة - بانتظار التقييم الأول.",
+  "desc 19": "من الإجحاف الحكم على فن هذا الشيف قبل تذوق طبقه المميز الأول!",
+  "Total Orders History": "سجل إجمالي الطلبات",
+  "No orders recorded in this period.": "لم تُسجل أي طلبات خلال هذه الفترة.",
+  "desc 20": "ترقب ساعات الذروة لمشاهدة مقاييس الأداء المباشرة.",
+  "Account Restricted": "الحساب مقيد حالياً",
+  "This user is currently Blocked": "هذا المستخدم محظور من دخول النظام",
+  "Trust Level": "مستوى الموثوقية",
+  "Identity Verified": "هوية موثقة بالكامل",
+  "Verification Pending": "التحقق قيد المراجعة",
+  "Personal Biography": "السيرة المهنية والشخصية",
+  "Registered on:": "تاريخ التسجيل الرسمي:",
+  "Avg Rating": "متوسط التقييم",
+  "Points": "نقاط الولاء",
+  "System Uptime": "مدة تشغيل النظام",
+  "Suspended": "موقوف مؤقتاً",
+  "Active": "نشط",
+  "Status": "الحالة",
+  "Salary :": "المستحقات الشهرية:",
+  "ZEUS": "زيوس",
+  "Preparing Culinary Profile...": "جاري تحضير الملف التعريفي لفن الطهي...",
+  "Verified Account": "حساب موثق",
+  "UnBlock User": "رفع القيد",
+
+  "---------- Admin Manage Dishes  -----------": "----------  إدارة الأقسام والأطباق -----------",
+
+  "Analytics": "مركز التحليلات",
+  "Overview": "نظرة عامة شاملة",
+  "Monitoring performance for": "مراقبة الأداء الخاص بـ",
+  "category": "الفئة",
+  "Today": "اليوم",
+  "This Week": "هذا الأسبوع",
+  "This Month": "هذا الشهر",
+  "Add New Dish": "إضافة طبق جديد",
+  "Total Sales": "إجمالي المبيعات",
+  "Total Costs": "إجمالي التكاليف",
+  "Net Profit": "صافي الأرباح",
+  "Today's Orders": "طلبات اليوم",
+  "This Week's Orders": "طلبات الأسبوع",
+  "This Month's Orders": "طلبات الشهر",
+  "Top Dish": "الطبق الأكثر مبيعاً",
+  "Ready to scale your business?": "هل أنت مستعد لتوسيع نطاق أعمالك؟",
+  "desc 21": "يتم مزامنة جميع بياناتك في الوقت الفعلي. استخدم هذه الرؤى لتطوير قائمتك ورفع مستوى رضا عملائك.",
+  "Export Reports": "تصدير التقارير الإدارية",
+  " © 2024 Admin Panel Dashboard": " © 2024 لوحة تحكم الإدارة العليا",
+  "Privacy Policy": "سياسة الخصوصية",
+  "Today Sells": "مبيعات اليوم",
+  "This Week Sells": "مبيعات الأسبوع",
+  "This Month Sells": "مبيعات الشهر",
+  "Today Top Dishes": "الأطباق المتصدرة اليوم",
+  "This Week Top Dishes": "الأطباق المتصدرة أسبوعياً",
+  "This Month Top Dishes": "الأطباق المتصدرة شهرياً",
+  "Image size is too large (Max 2MB)": "حجم الصورة يتجاوز الحد المسموح (الحد الأقصى 2 ميجابايت)",
+  "Dish name is required": "يرجى إدخال اسم الطبق",
+  "Enter a valid price": "يرجى إدخال سعر صحيح",
+  "Recipe instructions are required": "تعليمات التحضير مطلوبة",
+  "Please upload an image": "يرجى إرفاق صورة للطبق",
+  "Dish Added Successfully": "تم إضافة الطبق لقائمتك بنجاح",
+  "Add New": "إضافة صنف جديد",
+  "Dish Image": "صورة الطبق",
+  "Click to upload (PNG, JPG)": "انقر لرفع الصورة (PNG, JPG)",
+  "Dish Name": "اسم الطبق",
+  "e.g. Signature Beef Burger": "مثال: برجر اللحم الفاخر",
+  "Recipe / Instructions": "طريقة التحضير / المكونات",
+  "Describe how to prepare this dish...": "اكتب وصفاً لطريقة تحضير هذا الطبق أو مكوناته السرية...",
+  "Save Dish": "اعتماد وحفظ الطبق"
 }
