--- a/src/Project/Else/Components/locales/en/transition.json
+++ b/src/Project/Else/Components/locales/en/transition.json
@@ -172,5 +172,183 @@
   "Discard": "Discard",
   "Confirm": "Confirm",
 
-  "---------- Admin Home  -----------": "----------   Admin Home   -----------"
+  "---------- Admin Home  -----------": "----------   Admin Home   -----------",
+
+  "Zeus Restaurant | Admin": "Zeus Restaurant | Admin",
+  "Executive Dashboard": "Executive Dashboard",
+  "Visionary Analytics": "Visionary Analytics",
+  "desc 11": "Monitor the pulse of your culinary empire with real-time insights and precision analytics tailored for elite management. ",
+  "User's Reports": "User's Reports",
+  "Total Revenue": "Total Revenue",
+  "New Customers": "New Customers",
+  "Total Customers": "Total Customers",
+  "Low Stock": "Low Stock",
+  "vs last month": "vs last month",
+  "User Ecosystem Evolution": "User Ecosystem Evolution",
+  "Revenue Distribution": "Revenue Distribution",
+  "Elite Culinary Performance": "Elite Culinary Performance",
+  "New Branch: Dubai Mall": "New Branch: Dubai Mall",
+  "desc 12": "Expanding ZEUS to the heart of Dubai by Q3 2026.",
+  "Master Chef Recruitment": "Master Chef Recruitment",
+  "desc 13": "Hiring a 3-Michelin star chef for the Italian section.",
+  "AI Ordering System": "AI Ordering System",
+  "desc 14": "Implementing smart voice recognition for table orders.",
+  "Future Vision": "Future Vision",
+  "desc 15": "The next chapter of the ZEUS culinary legacy.",
+
+  "---------- Admin Manage User  -----------": "----------  Admin Manage User -----------",
+
+  "Search by": "Search by",
+  "name": "name",
+  "Zeus | Admin => Manage User's": "Zeus | Admin => Manage User's",
+  "Staff & Community": "Staff & Community",
+  "Management": "Management",
+  "Portal": "Portal",
+  "desc 16": "Comprehensive oversight of your culinary team and community members. Track activities, roles, and status in real-time.",
+  "Add New Chef": "Add New Chef",
+  "Total Users": "Total Users",
+  "Active Now": "Active Now",
+  "Restricted": "Restricted",
+  "Clear": "Clear",
+  "User Growth Analysis": "User Growth Analysis",
+  "Real-time verification metrics": "Real-time verification metrics",
+  "Total Community": "Total Community",
+  "Verified Accounts": "Verified Accounts",
+  "Security Center": "Security Center",
+  "Account restriction history": "Account restriction history",
+  "Timeline:": "Timeline:",
+  "Managers": "Managers",
+  "Master Chefs": "Master Chefs",
+  "Community": "Community",
+  "Monthly Salary : ": "Monthly Salary : ",
+  "Master Chef": "Master Chef",
+  "System Administrator": "System Administrator",
+  "Experience : ": "Experience : ",
+  "Blocked User": "Blocked User",
+  "Verified Member": "Verified Member",
+  "Community Member": "Community Member",
+  "Not Set": "Not Set",
+  "Member": "Member",
+  "BANNED": "BANNED",
+  "Contact": "Contact",
+  "Unknown": "Unknown",
+  "Resident": "Resident",
+  "DISABLED": "DISABLED",
+  "User Unverified Successfully!": "User Unverified Successfully!",
+  "User Verified Successfully!": "User Verified Successfully!",
+  "User Unblocked Successfully!": "User Unblocked Successfully!",
+  "User Blocked Successfully!": "User Blocked Successfully!",
+  "Full Admin Privileges": "Full Admin Privileges",
+  "Unverify User": "Unverify User",
+  "Verify User": "Verify User",
+  "Unblock User": "Unblock User",
+  "Block User": "Block User",
+  "Update Salary $": "Update Salary $",
+  "Fire Chef 👨‍🍳": "Fire Chef 👨‍🍳",
+  "View Profile": "View Profile",
+  "Chef Salary Updated Successfully": "Chef Salary Updated Successfully",
+  "Update Salary": "Update Salary",
+  "desc 17": "Adjust the monthly compensation for this chef. Changes will be reflected in payroll.",
+  "Monthly Salary": "Monthly Salary",
+  "Chef Fired Done": "Chef Fired Done",
+  "Relieve Chef?": "Relieve Chef?",
+  "Are you sure you want to remove": "Are you sure you want to remove",
+  "Confirm Termination": "Confirm Termination",
+  "Keep Staff Member": "Keep Staff Member",
+  "Admin Authorization Required": "Admin Authorization Required",
+  "Name Required": "Name Required",
+  "Role Required": "Role Required",
+  "Salary Must Be More Than 0": "Salary Must Be More Than 0",
+  "Please Select The City": "Please Select The City",
+  "Email Required": "Email Required",
+  "Please Write A Correct Email": "Please Write A Correct Email",
+  "Please Upload Chef Photo": "Please Upload Chef Photo",
+  "Chef Added Successfully!": "Chef Added Successfully!",
+  "Name": "Name",
+  "Role": "Role",
+  "Salary": "Salary",
+  "Choose The City": "Choose The City",
+  "Recipes Created": "Recipes Created",
+  "Certified Sous Chef": "Certified Sous Chef",
+  "Worked at Hilton (5 yrs)": "Worked at Hilton (5 yrs)",
+  "Expert in Italian Cuisine": "Expert in Italian Cuisine",
+  "Access Level: Full": "Access Level: Full",
+  "Last Audit: 2 days ago": "Last Audit: 2 days ago",
+  "Manager since 2021": "Manager since 2021",
+  "Total Orders": "Total Orders",
+  "Trust Level: Identity Verified": "Trust Level: Identity Verified",
+  "Trust Level: Pending": "Trust Level: Pending",
+  "Top 5% of Customers": "Top 5% of Customers",
+  "Member since 2024": "Member since 2024",
+  "Fire Chef": "Fire Chef",
+  "Manager Income Evolution": "Manager Income Evolution",
+  "Financial records are still being processed.": "Financial records are still being processed.",
+  "desc 18": "Income data will appear once the next billing cycle completes.",
+  "Chef Rating Performance": "Chef Rating Performance",
+  "Fresh Talent - No Reviews Yet.": "Fresh Talent - No Reviews Yet.",
+  "desc 19": "It would be unfair to judge this chef's art before their first signature dish!",
+  "Total Orders History": "Total Orders History",
+  "No orders recorded in this period.": "No orders recorded in this period.",
+  "desc 20": "Wait for the rush hour to see the performance metrics live.",
+  "Account Restricted": "Account Restricted",
+  "This user is currently Blocked": "This user is currently Blocked",
+  "Trust Level": "Trust Level",
+  "Identity Verified": "Identity Verified",
+  "Verification Pending": "Verification Pending",
+  "Personal Biography": "Personal Biography",
+  "Registered on:": "Registered on:",
+  "Avg Rating": "Avg Rating",
+  "Points": "Points",
+  "System Uptime": "System Uptime",
+  "Suspended": "Suspended",
+  "Active": "Active",
+  "Status": "Status",
+  "Salary :": "Salary :",
+  "ZEUS": "ZEUS",
+  "Preparing Culinary Profile...": "Preparing Culinary Profile...",
+  "Verified Account": "Verified Account",
+  "UnBlock User": "UnBlock User",
+
+  "---------- Admin Manage Dishes  -----------": "----------  Admin Manage Dishes -----------",
+
+  "Analytics": "Analytics",
+  "Overview": "Overview",
+  "Monitoring performance for": "Monitoring performance for",
+  "category": "category",
+  "Today": "Today",
+  "This Week": "This Week",
+  "This Month": "This Month",
+  "Add New Dish": "Add New Dish",
+  "Total Sales": "Total Sales",
+  "Total Costs": "Total Costs",
+  "Net Profit": "Net Profit",
+  "Today's Orders": "Today's Orders",
+  "This Week's Orders": "This Week's Orders",
+  "This Month's Orders": "This Month's Orders",
+  "Top Dish": "Top Dish",
+  "Ready to scale your business?": "Ready to scale your business?",
+  "desc 21": "All your data is synced in real-time. Use these insights to optimize your menu and increase customer satisfaction.",
+  "Export Reports": "Export Reports",
+  " © 2024 Admin Panel Dashboard": " © 2024 Admin Panel Dashboard",
+  "Privacy Policy": "Privacy Policy",
+  "Today Sells": "Today Sells",
+  "This Week Sells": "This Week Sells",
+  "This Month Sells": "This Month Sells",
+  "Today Top Dishes": "Today Top Dishes",
+  "This Week Top Dishes": "This Week Top Dishes",
+  "This Month Top Dishes": "This Month Top Dishes",
+  "Image size is too large (Max 2MB)": "Image size is too large (Max 2MB)",
+  "Dish name is required": "Dish name is required",
+  "Enter a valid price": "Enter a valid price",
+  "Recipe instructions are required": "Recipe instructions are required",
+  "Please upload an image": "Please upload an image",
+  "Dish Added Successfully": "Dish Added Successfully",
+  "Add New": "Add New",
+  "Dish Image": "Dish Image",
+  "Click to upload (PNG, JPG)": "Click to upload (PNG, JPG)",
+  "Dish Name": "Dish Name",
+  "e.g. Signature Beef Burger": "e.g. Signature Beef Burger",
+  "Recipe / Instructions": "Recipe / Instructions",
+  "Describe how to prepare this dish...": "Describe how to prepare this dish...",
+  "Save Dish": "Save Dish"
 }
