Edite Profile + Nav

--- a/src/Project/Else/Components/locales/ar/transition.json
+++ b/src/Project/Else/Components/locales/ar/transition.json
@@ -144,6 +144,10 @@
   "Address": "العنوان",
   "Joined On": "تاريخ الانضمام",
   "Last Login": "آخر ظهور",
+  "No Phone Provided": "عذاً لم تزدنا بالهاتف بعد !",
+  "No Address Provided": "لا يوجد عنوان مزود",
+  "No Email Provided": "لا يوجد إيميل مسجل",
+  "User": "مستخدم",
   "Zeus Restaurant | Profile": "مطعم زيوس | ملفي الشخصي",
   "Edit Profile": "تعديل البيانات",
   "Not provided": "غير محدد",
