--- a/src/Project/Else/Components/locales/en/transition.json
+++ b/src/Project/Else/Components/locales/en/transition.json
@@ -146,6 +146,10 @@
   "Address": "Address",
   "Joined On": "Joined On",
   "Last Login": "Last Login",
+  "No Phone Provided": "No Phone Provided",
+  "No Address Provided": "No Address Provided",
+  "No Email Provided": "No Email Provided",
+  "User": "User",
   "Zeus Restaurant | Profile": "Zeus Restaurant | Profile",
   "Edit Profile": "Edit Profile",
   "Not provided": "Not provided",
